--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
 certifi==2019.11.28
 chardet==3.0.4
 future==0.18.2
+gspread==3.1.0
+httplib2==0.14.0
 idna==2.8
 mintapi==1.41
 mock==3.0.5
 numpy==1.17.4
+oauth2client==4.1.3
 pandas==0.25.3
+pprint==0.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
 requests-file==1.4.3
+rsa==4.0
 selenium==3.141.0
 selenium-requests==1.3
 six==1.13.0
